p12098 Process status changed on note add fix.